test/extern/ferguson/externblock/enum-const.good
enum-const.chpl:9: error: cannot assign to const variable
