test/extern/ferguson/externblock/enum-const.chpl

extern {
  enum {
    ENUM_A = 1,
    ENUM_B = 0
  };
}

ENUM_A = 2;
